# clutch-new

./: dune-project  rocq-clutch.opam
theories/: clutch.v  dune
theories/eris/: adequacy.v  error_rules.v  presample_rules.v  total_adequacy.v
theories/prelude/: iris_ext.v  stdpp_ext.v  tactics.v
theories/prob/: countable_sum.v  couplings_app.v  distribution.v  prob_additional.v
theories/prob_lang/: erasure.v  lang.v  metatheory.v  wp_tactics.v
theories/prob_lang/gwp/: gen_weakestpre.v
